--- a/app/src/main/res/layout/activity_feb11.xml
+++ b/app/src/main/res/layout/activity_feb11.xml
@@ -7,12 +7,36 @@
     tools:context=".feb1_1">
 
     <TextView
+        android:id="@+id/txt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="96dp"
+        android:gravity="center"
+        android:text="Odd numbers appear here!"
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@+id/btn"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <Button
+        android:id="@+id/btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="168dp"
-        android:layout_marginTop="356dp"
-        android:text="hello world!"
+        android:layout_marginStart="152dp"
+        android:layout_marginTop="272dp"
+        android:backgroundTint="@color/green"
+        android:onClick="showAlertDialogButtonClicked"
+        android:text="Click me"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="52dp"
+        android:gravity="center"
+        android:text="Name: Anant Dubey\nPRN: 1132220920"
+        android:textSize="20sp"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="0dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
