--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="green">#5dbea3</color>
+    <color name="notificationBarColor">#1e2761</color>
+    <color name="actionBarColor">#408ec6</color>
 </resources>
