--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,10 +26,10 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/fifth"
+            android:id="@+id/f11"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/fifth"
+            android:text="@string/f11"
             android:layout_marginVertical="5dp"/>
 
     </LinearLayout>
