--- a/app/src/main/res/layout/activity_jan251.xml
+++ b/app/src/main/res/layout/activity_jan251.xml
@@ -4,8 +4,7 @@
     android:id="@+id/LinearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    android:gravity="center"
+    android:gravity="center_horizontal"
     android:orientation="vertical"
     tools:context=".jan25_1">
 
@@ -13,45 +12,40 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="200dp"
+        android:layout_marginTop="52dp"
+        android:layout_marginBottom="150dp"
         android:gravity="center"
         android:text="Name: Anant Dubey\nPRN: 1132220920"
-        android:textColor="@color/black"
         android:textSize="20sp" />
 
     <RadioGroup
         android:id="@+id/yourRadioGroup"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="-20dp">
+        android:layout_height="wrap_content">
 
         <RadioButton
             android:id="@+id/red"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Red"
-            android:textColor="@color/black" />
+            android:text="Red" />
 
         <RadioButton
             android:id="@+id/cream"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Cream"
-            android:textColor="@color/black" />
+            android:text="Cream" />
 
         <RadioButton
             android:id="@+id/sky"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="SkyBlue"
-            android:textColor="@color/black" />
+            android:text="SkyBlue" />
 
         <RadioButton
             android:id="@+id/navy"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="NavyBlue"
-            android:textColor="@color/black" />
+            android:text="NavyBlue" />
     </RadioGroup>
 
 </LinearLayout>
