--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,27 @@
         android:orientation="vertical">
 
         <Button
+            android:id="@+id/j121"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="5dp"
+            android:text="@string/j121" />
+
+        <Button
+            android:id="@+id/j181"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="5dp"
+            android:text="@string/j181" />
+
+        <Button
+            android:id="@+id/j182"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="5dp"
+            android:text="@string/j182" />
+
+        <Button
             android:id="@+id/j191"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
