--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,13 @@
             android:text="@string/j121" />
 
         <Button
+            android:id="@+id/j122"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="5dp"
+            android:text="@string/j122" />
+
+        <Button
             android:id="@+id/j181"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
