--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -91,6 +91,13 @@
             android:layout_marginVertical="5dp"
             android:text="@string/f12" />
 
+        <Button
+            android:id="@+id/f81"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="5dp"
+            android:text="@string/f81" />
+
     </LinearLayout>
 
 </ScrollView>
