--- a/app/src/main/res/layout/custom_layout.xml
+++ b/app/src/main/res/layout/custom_layout.xml
@@ -8,6 +8,7 @@
 
     <EditText
         android:id="@+id/editText"
+        android:inputType="number"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 </LinearLayout>
