changed files to accept custom names and prn

--- a/app/src/main/res/layout/activity_feb81.xml
+++ b/app/src/main/res/layout/activity_feb81.xml
@@ -8,9 +8,10 @@
     tools:context=".feb8_1">
 
     <TextView
+        android:id="@+id/textViewId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="100dp"
+        android:layout_marginTop="100dp"
         android:gravity="center"
         android:text="Name: Anant Dubey\nPRN: 1132220920"
         android:textSize="20sp" />
