--- a/app/src/main/res/layout/activity_feb12.xml
+++ b/app/src/main/res/layout/activity_feb12.xml
@@ -7,6 +7,7 @@
     tools:context=".feb1_2">
 
     <TextView
+        android:id="@+id/textViewId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
