--- a/app/src/main/res/layout/activity_feb161_secondary.xml
+++ b/app/src/main/res/layout/activity_feb161_secondary.xml
@@ -8,6 +8,7 @@
     tools:context=".feb16_1">
 
     <TextView
+        android:id="@+id/textViewId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
