--- a/app/src/main/res/layout/activity_jan121.xml
+++ b/app/src/main/res/layout/activity_jan121.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:gravity="center_horizontal"
+    android:orientation="vertical"
     tools:context=".jan12_1">
 
     <TextView
+        android:id="@+id/textViewId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
@@ -26,8 +26,8 @@
             android:id="@+id/PersonName"
             android:layout_width="200dp"
             android:layout_height="50dp"
-            android:hint="Enter Your Name"
             android:layout_marginEnd="25dp"
+            android:hint="Enter Your Name"
             android:inputType="textPersonName" />
 
         <Button
