--- a/app/src/main/res/layout/activity_jan122.xml
+++ b/app/src/main/res/layout/activity_jan122.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,6 +8,7 @@
     tools:context=".jan12_2">
 
     <TextView
+        android:id="@+id/textViewId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
@@ -41,8 +41,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_marginTop="50dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
         android:gravity="center_horizontal"
         android:orientation="horizontal">
 
@@ -78,10 +78,10 @@
 
     <TextView
         android:id="@+id/result"
-        android:layout_marginTop="50dp"
-        android:textSize="15sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Result" />
+        android:layout_marginTop="50dp"
+        android:text="Result"
+        android:textSize="15sp" />
 
 </LinearLayout>
