--- a/app/src/main/res/layout/activity_jan181.xml
+++ b/app/src/main/res/layout/activity_jan181.xml
@@ -8,12 +8,13 @@
     tools:context=".jan18_1">
 
     <TextView
+        android:id="@+id/textViewId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="15dp"
         android:gravity="center"
         android:text="Name: Anant Dubey\nPRN: 1132220920"
-        android:textSize="20sp"/>
+        android:textSize="20sp" />
 
     <HorizontalScrollView
         android:layout_width="match_parent"
