--- a/app/src/main/res/layout/activity_jan251.xml
+++ b/app/src/main/res/layout/activity_jan251.xml
@@ -9,11 +9,10 @@
     tools:context=".jan25_1">
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+        android:id="@+id/textViewId"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="52dp"
-        android:layout_marginBottom="150dp"
+        android:layout_marginTop="100dp"
         android:gravity="center"
         android:text="Name: Anant Dubey\nPRN: 1132220920"
         android:textSize="20sp" />
@@ -21,7 +20,8 @@
     <RadioGroup
         android:id="@+id/yourRadioGroup"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp">
 
         <RadioButton
             android:id="@+id/red"
