--- a/app/src/main/res/layout/activity_jan252.xml
+++ b/app/src/main/res/layout/activity_jan252.xml
@@ -8,11 +8,10 @@
     tools:context=".jan25_2">
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+        android:id="@+id/textViewId"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="52dp"
-        android:layout_marginBottom="150dp"
+        android:layout_marginTop="100dp"
         android:gravity="center"
         android:text="Name: Anant Dubey\nPRN: 1132220920"
         android:textSize="20sp" />
@@ -20,6 +19,7 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="150dp"
         android:layout_marginBottom="10dp"
         android:hint="Write here"
         android:inputType="text" />
