--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,123 +69,250 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="2dp"
-                android:layout_marginVertical="35dp"
-                android:background="@color/black" />
+                android:layout_marginTop="35dp"
+                android:background="@drawable/line_style" />
 
-            <ScrollView
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:layout_marginBottom="25dp"
+                android:fontFamily="@font/inter_semibold"
+                android:text="@string/j12"
+                android:textSize="28sp" />
+
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:orientation="vertical">
+                <Button
+                    android:id="@+id/j121"
+                    android:layout_width="170dp"
+                    android:layout_height="170dp"
+                    android:layout_alignParentStart="true"
+                    android:gravity="bottom"
+                    android:paddingBottom="15dp"
+                    android:text="@string/a1" />
 
-                    <Button
-                        android:id="@+id/j121"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginVertical="5dp"
-                        android:text="@string/j121" />
+                <Button
+                    android:id="@+id/j122"
+                    android:layout_width="170dp"
+                    android:layout_height="170dp"
+                    android:layout_alignParentEnd="true"
+                    android:gravity="bottom"
+                    android:paddingBottom="15dp"
+                    android:text="@string/a2" />
+            </RelativeLayout>
 
-                    <Button
-                        android:id="@+id/j122"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginVertical="5dp"
-                        android:text="@string/j122" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:layout_marginBottom="25dp"
+                android:fontFamily="@font/inter_semibold"
+                android:text="@string/j18"
+                android:textSize="28sp" />
 
-                    <Button
-                        android:id="@+id/j181"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginVertical="5dp"
-                        android:text="@string/j181" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-                    <Button
-                        android:id="@+id/j182"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginVertical="5dp"
-                        android:text="@string/j182" />
+                <Button
+                    android:id="@+id/j181"
+                    android:layout_width="170dp"
+                    android:layout_height="170dp"
+                    android:layout_alignParentStart="true"
+                    android:gravity="bottom"
+                    android:paddingBottom="15dp"
+                    android:text="@string/a1" />
 
-                    <Button
-                        android:id="@+id/j191"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginVertical="5dp"
-                        android:text="@string/j191" />
+                <Button
+                    android:id="@+id/j182"
+                    android:layout_width="170dp"
+                    android:layout_height="170dp"
+                    android:layout_alignParentEnd="true"
+                    android:gravity="bottom"
+                    android:paddingBottom="15dp"
+                    android:text="@string/a2" />
+            </RelativeLayout>
 
-                    <Button
-                        android:id="@+id/j192"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginVertical="5dp"
-                        android:text="@string/j192" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:layout_marginBottom="25dp"
+                android:fontFamily="@font/inter_semibold"
+                android:text="@string/j19"
+                android:textSize="28sp" />
 
-                    <Button
-                        android:id="@+id/j251"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginVertical="5dp"
-                        android:text="@string/j251" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-                    <Button
-                        android:id="@+id/j252"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginVertical="5dp"
-                        android:text="@string/j252" />
+                <Button
+                    android:id="@+id/j191"
+                    android:layout_width="170dp"
+                    android:layout_height="170dp"
+                    android:layout_alignParentStart="true"
+                    android:gravity="bottom"
+                    android:paddingBottom="15dp"
+                    android:text="@string/a1" />
 
-                    <Button
-                        android:id="@+id/j253"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginVertical="5dp"
-                        android:text="@string/j253" />
+                <Button
+                    android:id="@+id/j192"
+                    android:layout_width="170dp"
+                    android:layout_height="170dp"
+                    android:layout_alignParentEnd="true"
+                    android:gravity="bottom"
+                    android:paddingBottom="15dp"
+                    android:text="@string/a2" />
+            </RelativeLayout>
 
-                    <Button
-                        android:id="@+id/f11"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginVertical="5dp"
-                        android:text="@string/f11" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:layout_marginBottom="25dp"
+                android:fontFamily="@font/inter_semibold"
+                android:text="@string/j25"
+                android:textSize="28sp" />
 
-                    <Button
-                        android:id="@+id/f12"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginVertical="5dp"
-                        android:text="@string/f12" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-                    <Button
-                        android:id="@+id/f81"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginVertical="5dp"
-                        android:text="@string/f81" />
+                <Button
+                    android:id="@+id/j251"
+                    android:layout_width="170dp"
+                    android:layout_height="170dp"
+                    android:layout_alignParentStart="true"
+                    android:gravity="bottom"
+                    android:paddingBottom="15dp"
+                    android:text="@string/a1" />
 
-                    <Button
-                        android:id="@+id/f91"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginVertical="5dp"
-                        android:text="@string/f91" />
+                <Button
+                    android:id="@+id/j252"
+                    android:layout_width="170dp"
+                    android:layout_height="170dp"
+                    android:layout_alignParentEnd="true"
+                    android:gravity="bottom"
+                    android:paddingBottom="15dp"
+                    android:text="@string/a2" />
 
-                    <Button
-                        android:id="@+id/f161"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginVertical="5dp"
-                        android:text="@string/f161" />
+                <Button
+                    android:id="@+id/j253"
+                    android:layout_width="170dp"
+                    android:layout_height="170dp"
+                    android:layout_below="@+id/j251"
+                    android:layout_marginTop="20dp"
+                    android:gravity="bottom"
+                    android:paddingBottom="15dp"
+                    android:text="@string/a3" />
+            </RelativeLayout>
 
-                </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:layout_marginBottom="25dp"
+                android:fontFamily="@font/inter_semibold"
+                android:text="@string/f1"
+                android:textSize="28sp" />
 
-            </ScrollView>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:id="@+id/f11"
+                    android:layout_width="170dp"
+                    android:layout_height="170dp"
+                    android:layout_alignParentStart="true"
+                    android:gravity="bottom"
+                    android:paddingBottom="15dp"
+                    android:text="@string/a1" />
+
+                <Button
+                    android:id="@+id/f12"
+                    android:layout_width="170dp"
+                    android:layout_height="170dp"
+                    android:layout_alignParentEnd="true"
+                    android:gravity="bottom"
+                    android:paddingBottom="15dp"
+                    android:text="@string/a2" />
+            </RelativeLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:layout_marginBottom="25dp"
+                android:fontFamily="@font/inter_semibold"
+                android:text="@string/f8"
+                android:textSize="28sp" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:id="@+id/f81"
+                    android:layout_width="170dp"
+                    android:layout_height="170dp"
+                    android:layout_alignParentStart="true"
+                    android:gravity="bottom"
+                    android:paddingBottom="15dp"
+                    android:text="@string/a1" />
+            </RelativeLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:layout_marginBottom="25dp"
+                android:fontFamily="@font/inter_semibold"
+                android:text="@string/f9"
+                android:textSize="28sp" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:id="@+id/f91"
+                    android:layout_width="170dp"
+                    android:layout_height="170dp"
+                    android:layout_alignParentStart="true"
+                    android:gravity="bottom"
+                    android:paddingBottom="15dp"
+                    android:text="@string/a1" />
+            </RelativeLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:layout_marginBottom="25dp"
+                android:fontFamily="@font/inter_semibold"
+                android:text="@string/f16"
+                android:textSize="28sp" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:id="@+id/f161"
+                    android:layout_width="170dp"
+                    android:layout_height="170dp"
+                    android:layout_alignParentStart="true"
+                    android:gravity="bottom"
+                    android:paddingBottom="15dp"
+                    android:text="@string/a1" />
+            </RelativeLayout>
+
         </LinearLayout>
 
     </ScrollView>
-
 
 </LinearLayout>
