--- a/app/src/main/res/layout/activity_jan253.xml
+++ b/app/src/main/res/layout/activity_jan253.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context=".jan25_3">
+    tools:context=".jan25.jan25_3">
 
     <TextView
         android:id="@+id/textViewId"
