--- a/app/src/main/res/layout/activity_mar11.xml
+++ b/app/src/main/res/layout/activity_mar11.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context=".mar1_1">
+    tools:context=".mar1.mar1_1">
 
     <TextView
         android:id="@+id/textViewId"
