--- a/app/src/main/res/layout/activity_feb11.xml
+++ b/app/src/main/res/layout/activity_feb11.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
-    tools:context=".feb1_1">
+    tools:context=".feb1.feb1_1">
 
     <TextView
         android:id="@+id/txt"
