--- a/app/src/main/res/layout/activity_feb12.xml
+++ b/app/src/main/res/layout/activity_feb12.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".feb1_2">
+    tools:context=".feb1.feb1_2">
 
     <TextView
         android:id="@+id/textViewId"
