--- a/app/src/main/res/layout/activity_feb221.xml
+++ b/app/src/main/res/layout/activity_feb221.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context=".feb16_1">
+    tools:context=".feb16.feb16_1">
 
     <TextView
         android:id="@+id/textViewId"
