--- a/app/src/main/res/layout/activity_feb81.xml
+++ b/app/src/main/res/layout/activity_feb81.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context=".feb8_1">
+    tools:context=".feb8.feb8_1">
 
     <TextView
         android:id="@+id/textViewId"
