--- a/app/src/main/res/layout/activity_jan122.xml
+++ b/app/src/main/res/layout/activity_jan122.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context=".jan12_2">
+    tools:context=".jan12.jan12_2">
 
     <TextView
         android:id="@+id/textViewId"
