--- a/app/src/main/res/layout/activity_jan182.xml
+++ b/app/src/main/res/layout/activity_jan182.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".jan18_2">
+    tools:context=".jan18.jan18_2">
 
     <TextView
         android:id="@+id/textViewId"
