--- a/app/src/main/res/layout/activity_jan191.xml
+++ b/app/src/main/res/layout/activity_jan191.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
-    tools:context=".jan19_1">
+    tools:context=".jan19.jan19_1">
 
     <TableLayout
         android:layout_width="match_parent"
